standardmetadata/67b076bc-90d2-4cfe-ab28-304d15cb1f2e/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Con1__c</fullName>
        <label>Con1</label>
        <type>Text</type>
        <length>255</length>
        </fields>
    <fields>
        <fullName>Con2__c</fullName>
        <label>Con2</label>
        <type>Date</type>
        </fields>
    <fields>
        <fullName>Con3__c</fullName>
        <label>Con3</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
        </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>